fix extra padding for icon only during buttonLabelBehaviorw=true

--- a/packages/@adobe/spectrum-css-temp/components/actiongroup/index.css
+++ b/packages/@adobe/spectrum-css-temp/components/actiongroup/index.css
@@ -49,10 +49,14 @@ governing permissions and limitations under the License.
 
   .spectrum-ActionGroup-item {
     flex-shrink: 0;
-  }
 
-  .spectrum-ActionGroup-item--iconOnly {
-    padding-inline-end: var(--spectrum-actionbutton-icon-padding-x);
+    &.spectrum-ActionGroup-item--iconOnly {
+      padding-inline-end: var(--spectrum-actionbutton-icon-padding-x);
+    }
+
+    .spectrum-ActionGroup-item-icon {
+      padding-inline-end: 0;
+    }
   }
 
   &:focus {
